// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> renders correctly renders with a language selector 1`] = `
<footer
  role="contentinfo"
>
  <section
    className="footer-navigation"
  >
    <div
      className="container-xl d-xl-flex justify-content-between py-3"
    >
      <div
        className="footer-navigation__brand d-flex flex-column justify-content-between px-4"
      >
        <a
          aria-label="edX Home"
          className="d-block"
          href="http://localhost:18000"
        >
          <img
            alt="Powered by Open edX"
            src="https://edx-cdn.org/v3/default/logo-trademark.svg"
            style={
              {
                "maxHeight": 45,
              }
            }
          />
        </a>
        <div
          className="mb-2"
        >
          <div
            className="pgn__dropdown pgn__dropdown-light language-selector dropdown"
            data-testid="dropdown"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-outline-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-globe "
                data-icon="globe"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M352 256c0 22.2-1.2 43.6-3.3 64l-185.3 0c-2.2-20.4-3.3-41.8-3.3-64s1.2-43.6 3.3-64l185.3 0c2.2 20.4 3.3 41.8 3.3 64zm28.8-64l123.1 0c5.3 20.5 8.1 41.9 8.1 64s-2.8 43.5-8.1 64l-123.1 0c2.1-20.6 3.2-42 3.2-64s-1.1-43.4-3.2-64zm112.6-32l-116.7 0c-10-63.9-29.8-117.4-55.3-151.6c78.3 20.7 142 77.5 171.9 151.6zm-149.1 0l-176.6 0c6.1-36.4 15.5-68.6 27-94.7c10.5-23.6 22.2-40.7 33.5-51.5C239.4 3.2 248.7 0 256 0s16.6 3.2 27.8 13.8c11.3 10.8 23 27.9 33.5 51.5c11.6 26 20.9 58.2 27 94.7zm-209 0L18.6 160C48.6 85.9 112.2 29.1 190.6 8.4C165.1 42.6 145.3 96.1 135.3 160zM8.1 192l123.1 0c-2.1 20.6-3.2 42-3.2 64s1.1 43.4 3.2 64L8.1 320C2.8 299.5 0 278.1 0 256s2.8-43.5 8.1-64zM194.7 446.6c-11.6-26-20.9-58.2-27-94.6l176.6 0c-6.1 36.4-15.5 68.6-27 94.6c-10.5 23.6-22.2 40.7-33.5 51.5C272.6 508.8 263.3 512 256 512s-16.6-3.2-27.8-13.8c-11.3-10.8-23-27.9-33.5-51.5zM135.3 352c10 63.9 29.8 117.4 55.3 151.6C112.2 482.9 48.6 426.1 18.6 352l116.7 0zm358.1 0c-30 74.1-93.6 130.9-171.9 151.6c25.5-34.2 45.2-87.7 55.3-151.6l116.7 0z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <span
                className="pl-1 languageLabel"
              >
                English
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    className="footer-copyright"
  >
    <div
      className="container-xl py-3 px-4"
    >
      <div
        className="footer-copyright__text"
      >
        © 
        2025
         - FCT|FCCN 
        All rights reserved
      </div>
    </div>
  </section>
</footer>
`;

exports[`<Footer /> renders correctly renders without a language selector 1`] = `
<footer
  role="contentinfo"
>
  <section
    className="footer-navigation"
  >
    <div
      className="container-xl d-xl-flex justify-content-between py-3"
    >
      <div
        className="footer-navigation__brand d-flex flex-column justify-content-between px-4"
      >
        <a
          aria-label="edX Home"
          className="d-block"
          href="http://localhost:18000"
        >
          <img
            alt="Powered by Open edX"
            src="https://edx-cdn.org/v3/default/logo-trademark.svg"
            style={
              {
                "maxHeight": 45,
              }
            }
          />
        </a>
      </div>
    </div>
  </section>
  <section
    className="footer-copyright"
  >
    <div
      className="container-xl py-3 px-4"
    >
      <div
        className="footer-copyright__text"
      >
        © 
        2025
         - FCT|FCCN 
        All rights reserved
      </div>
    </div>
  </section>
</footer>
`;

exports[`<Footer /> renders correctly renders without a language selector in pt-pt 1`] = `
<footer
  role="contentinfo"
>
  <section
    className="footer-navigation"
  >
    <div
      className="container-xl d-xl-flex justify-content-between py-3"
    >
      <div
        className="footer-navigation__brand d-flex flex-column justify-content-between px-4"
      >
        <a
          aria-label="edX Home"
          className="d-block"
          href="http://localhost:18000"
        >
          <img
            alt="Powered by Open edX"
            src="https://edx-cdn.org/v3/default/logo-trademark.svg"
            style={
              {
                "maxHeight": 45,
              }
            }
          />
        </a>
      </div>
    </div>
  </section>
  <section
    className="footer-copyright"
  >
    <div
      className="container-xl py-3 px-4"
    >
      <div
        className="footer-copyright__text"
      >
        © 
        2025
         - FCT|FCCN 
        All rights reserved
      </div>
    </div>
  </section>
</footer>
`;

exports[`<StudioFooterHelpSectionSlot /> renders correctly 1`] = `
[
  <div
    className="m-0 mt-6 row align-items-center justify-content-center"
  >
    <div
      className="col border-top mr-2"
    />
    <button
      className="btn btn-outline-primary btn-sm"
      data-testid="helpToggleButton"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="pgn__icon pgn__icon__sm btn-icon-before"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm1 17h-2v-2h2v2Zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25Z"
            fill="currentColor"
          />
        </svg>
      </span>
      Looking for help with Studio?
      <span
        className="pgn__icon pgn__icon__sm btn-icon-after"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <div
      className="col border-top ml-2"
    />
  </div>,
  <div
    className="px-4 container-mw-xl container-fluid"
  />,
]
`;
